[metadata]
name = chainsyncer
version = 0.0.6a2
description = Generic blockchain syncer driver
author = Louis Holbrook
author_email = dev@holbrook.no
url = https://gitlab.com/chaintools/chainsyncer
keywords =
	cryptocurrency
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Topic :: Internet
#	Topic :: Blockchain :: EVM
license = GPL3
licence_files =
	LICENSE.txt

[options]
include_package_data = True
python_requires = >= 3.6
packages =
	chainsyncer
	chainsyncer.db
	chainsyncer.db.models
	chainsyncer.backend
	chainsyncer.driver
	chainsyncer.unittest

[options.package_data]
* =
	sql/*

#[options.entry_points]
#console_scripts =
#	blocksync-celery = chainsyncer.runnable.tracker:main
